# TensorflowSignDetector

./: .gitignore  CMakeLists.txt  Line.cpp  LinesProcessor.cpp  README.md  Utils.cpp  main.cpp  results.txt
classifier_model/: retrained_labels.txt
cmake/modules/: Eigen_VERSION.cmake  Protobuf_VERSION.cmake
include/: Line.h  LinesProcessor.h  SignClassifier.h  SignDetector.h  SignIdentifier.h  SignPlace.h  TrainingData.h  Types.h  Utils.h
presentation/: paper.odt
presentation_material/: after_classificationpng
src/: PrepareTrainingData.cpp  SignClassifier.cpp  SignDetector.cpp  SignIdentifier.cpp  SignPlace.cpp  TrainingData.cpp
tensorflow/: .gitignore
tests/: SignPlaceTest.cpp  SignPlaceTest.h  TestMain.cpp  TestToolkit.h
train_data/: cleanup.sh  create_directories.sh
